[tool.poetry]
name = "arb"
version = "0.1.0"
description = ""
authors = ["lshalon <liam@levelvc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
py-clob-client = "^0.18.0"
kalshi-python = "2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
